# scimigo-co

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  design.md  pyproject.toml  relations.md
.github/workflows/: cd.yml  ci.yml
docker/: Dockerfile.api  Dockerfile.migrations  Dockerfile.test  docker-compose.dev.yml  docker-compose.test.yml
docs/: co-meta-coding-design.md  co-meta-coding.md  study-path-task-tracking-design.md  system-spec.md
docs/tickets/: CO-001-schema-alignment.md  CO-002-meta-track-seed.md  CO-003A-signal-extraction.md  CO-003B-study-path-implementation-tickets.md  CO-004-spaced-review-scheduler.md  CO-005-problem-authoring-pipeline.md  CO-006-sse-streaming-implementation.md  CO-007-extensibility-framework.md  ROADMAP.md
migrations/: env.py  seed.sql
migrations/versions/: 001_initial_schema.py  1e2fbf87c0b9_add_study_path_tables.py  d3fa9090ded3_align_schema_with_models.py
openapi/: co.v1.yaml
scripts/: import_meta_track.py  test_track_endpoint.py
src/co/: __init__.py  auth.py  config.py  middleware.py  server.py
src/co/clients/: eval_service.py  problem_bank.py  tutor_api.py
src/co/db/: base.py  (+1 more)
tests/: conftest.py
tests/e2e/: test_submission_flow.py
tests/fixtures/: sample_problems.json
tests/integration/: test_api_endpoints.py  test_meta_evaluation.py
tests/unit/: test_auth_middleware.py  test_basic.py  test_meta_signal_extractor.py  test_meta_track_import.py  test_models.py  test_session_review.py  test_study_path_models.py  test_study_path_service.py  test_study_task_service.py
(+26 files in other folders)
